--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
   },
   "dependencies": {
     "@primeuix/themes": "^1.0.0",
+    "@tailwindcss/vite": "^4.0.17",
+    "pinia": "^3.0.1",
+    "primeicons": "^7.0.0",
     "primevue": "^4.3.3",
+    "tailwindcss": "^4.0.17",
+    "tailwindcss-primeui": "^0.6.1",
     "vue": "^3.5.13"
   },
   "devDependencies": {
